--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
 
     <title>Benevolent / Raghav</title>
+    
     <link rel="stylesheet" href="../css/home.css">
 </head>
 
-<body>
+<body onload="alert('Work In Progress!')">
     <header>
         <div id="header-div">
             <div id="header" class="font-def " style="font-size:1.3em; color: white;">
