--- a/public/html/index.html
+++ b/public/html/index.html
@@ -35,7 +35,7 @@
             <h1 class="text-2_5x1 text-1_8x1 text-4x1 font-def">
                 Hi,
                 <br>
-                I'm Raghav(Bene)
+                I'm Raghav / Bene
                 <br>
                 I am a freelance developer
             </h1>
