--- a/public/html/index.html
+++ b/public/html/index.html
@@ -14,7 +14,7 @@
         <div id="header-div">
             <div id="header" class="font-def " style="font-size:1.3em; color: white;">
                 
-                <a href="/" style="color: white;text-decoration:none;">
+                <a href="#header" style="color: white;text-decoration:none;">
                     <div id="home-dp">
 
                     <img src="../res/img/profile.png" id="profile-pic">
