--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head >
     <meta charset="UTF-8" />
 
     <title>Benevolent / Raghav</title>
     
     <link rel="stylesheet" href="../css/home.css">
+    <script>
+        alert('Work In Progress!');
+    </script>
 </head>
 
-<body onload="alert('Work In Progress!')">
+<body >
     <header>
         <div id="header-div">
             <div id="header" class="font-def " style="font-size:1.3em; color: white;">
