--- a/public/html/index.html
+++ b/public/html/index.html
@@ -8,7 +8,21 @@
 
     <link rel="stylesheet" href="../css/home.css">
     <script>
-        alert(navigator.userAgent);
+        alert(
+            function(){
+            const ua = navigator.userAgent;
+            if (/(tablet|ipad|playbook|silk)|(android(?!.*mobi))/i.test(ua)) {
+                return "tablet";
+            }
+            if (
+                /Mobile|iP(hone|od)|Android|BlackBerry|IEMobile|Kindle|Silk-Accelerated|(hpw|web)OS|Opera M(obi|ini)/.test(
+                    ua
+                )
+            ) {
+                return "mobile";
+            }
+            return "desktop";
+        }());
     </script>
 </head>
 
