--- a/public/html/index.html
+++ b/public/html/index.html
@@ -126,7 +126,7 @@
                 <div class="text-4x1 flex-mode center-all text-2_5x1 font-def tp-heading tp-heading-right">
                     TO-DO
                 </div>
-                <div class="no-bold flex-mode center-all font-def tp-text" style="font-size: 1em">
+                <div class="no-bold flex-mode center-all font-def tp-text" style="font-size: 1em;color:orangered">
                     - Create slides of projects. <br>
                     - Create a footer. <br>
                     - Footer contains socials and link to resume. <br>
