Fixed issues with thankyou form

--- a/public/html/thankyou-contact.html
+++ b/public/html/thankyou-contact.html
@@ -35,7 +35,7 @@
             
         </h1>
       <div>
-            <a href="/" target="_blank" class="nav-links" style="border: 2px white solid; padding:5px; border-radius:5px;" onclick="javascript:setTimeout(window.close,100)" >Click to go back</a>
+            <a href="/website/" target="_blank" class="nav-links" style="border: 2px white solid; padding:5px; border-radius:5px;" onclick="javascript:setTimeout(window.close,100)" >Click to go back</a>
 
       </div>  
 
