--- a/public/html/thankyou-contact.html
+++ b/public/html/thankyou-contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
 
-    <title>Benevolent / Raghav</title>
+    <title>Thank you!</title>
 
     <link rel="stylesheet" id="home-css" href="../css/home.css" />
 </head>
@@ -23,24 +23,21 @@
                     <a href="https://www.linkedin.com/in/raghv-r/" target="_blank" class="nav-links">LinkedIn</a>
                     |
                     <a href="https://www.github.com/bene-volent" target="_blank" class="nav-links">Github</a>
-
                 </nav>
             </div>
         </div>
     </header>
-    <section class="panel_5x5 blue_panel flex-mode center-all" style="flex-direction:column ;">
+    <section class="panel_5x5 blue_panel flex-mode center-all" style="flex-direction: column">
         <h1 class="text-2_5x1 text-1_8x1 text-4x1 font-def">
-            Thank you for connecting. <br>
+            Thank you for connecting. <br />
             Will be in contact soon.🙂
-            
         </h1>
-      <div>
-            <a href="/website/" target="_blank" class="nav-links" style="border: 2px white solid; padding:5px; border-radius:5px;" onclick="javascript:setTimeout(window.close,100)" >Click to go back</a>
-
-      </div>  
-
+        <div>
+            <a href="/website/" target="_blank" class="nav-links"
+                style="border: 2px white solid; padding: 5px; border-radius: 5px;"
+                onclick="javascript:setTimeout(window.close,100)">Click to go back</a>
+        </div>
     </section>
-
 </body>
 
 </html>
