--- a/public/html/index.html
+++ b/public/html/index.html
@@ -75,7 +75,7 @@
         <section id="contacts" class="panel_5x5 white_panel tp-section">
             <div class="two-box-panel text-head">
                 <div id="contact-box" class="no-bold flex-mode font-def tp-text-no-zoom" style="font-size: 1.3em">
-                    <form action="https://submit-form.com/YUyEEEn1"" method="POST" id="contact-me" target="_blank">
+                    <form action="https://submit-form.com/YUyEEEn1"" method="POST" id="contact-me" >
 
                         <!-- Redirection for thank you -->
 
