Added Meta Tags

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Benevolent / Raghav</title>
+    <meta name="description" content="Raghav / Bene's Portfolio.">
+    <meta name="keywords" content="portfolio, resume,Raghav,Bene,Benevolent,freelancer">
+    <meta name="author" content="Raghav / Bene">
 
     <link rel="stylesheet" id="home-css" href="../css/home.css" />
 
