Changed TODO Structure

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -132,14 +132,20 @@
                     TO-DO
                 </div>
                 <div class="no-bold flex-mode center-all font-def tp-text" style="font-size: 1em;color:orangered">
-                    - Create slides of projects. <br>
-                    - Create a footer. <br>
-                    - Footer contains socials and link to resume. <br>
-                    - If know how to create same for mobile devices do so. <br>
-                    <br>
-                    NOTE TO PEOPLE <br>
-                    - The content present in the website is fully functional and responsive for desktop devices. <br>
-
+                    <ul>
+                        <li>Create slides of projects.</li>
+                        <li>Create a footer.</li>
+                        <li>Footer contains socials and link to resume.</li>
+                        <li>If know how to create same for mobile devices do so. </li>
+                        <li>
+                            <strong>
+                                NOTE TO PEOPLE
+                            </strong>
+                            <ul>
+                                <li><em>The content present in the website is fully functional and responsive for desktop devices.</em> </li>
+                            </ul>
+                           
+                        </li>
                 </div>
             </div>
         </section>
