--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width">
     <meta name="description" content="Raghav / Bene's Portfolio.">
     <meta name="keywords" content="portfolio, resume,Raghav,Bene,Benevolent,freelancer">
     <meta name="author" content="Raghav / Bene">
